--- a/src/components/Portofilio/portfolio.css
+++ b/src/components/Portofilio/portfolio.css
@@ -2,3 +2,11 @@ a {
     text-decoration: none;
     color: inherit;
 }
+.theimg{
+    height: 500px;
+}
+@media screen and (max-width:565px) {
+    .theimg{
+        height: auto;
+    }
+}
