--- a/src/components/ecommerce/Home/card.css
+++ b/src/components/ecommerce/Home/card.css
@@ -1,4 +1,4 @@
-.card-product:after {
+/* .card-product:after {
     content: "";
     display: table;
     clear: both;
@@ -29,4 +29,4 @@
     padding: 15px;
     border-top: 1px solid #eee; }
   .card-product .title {
-    margin-top: 0; }
+    margin-top: 0; } */
